--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,10 @@
     <title>CampusConnect</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <head>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    </head>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -30,7 +34,8 @@
 
             <!-- Navbar Brand (Centered & Larger) -->
             <a class="navbar-brand fw-bold mx-auto position-absolute start-50 translate-middle-x site-title text-success"
-                href="index.html">CampusConnect</a>
+                href="index.html">CampusConnect
+            </a>
 
             <!-- Navbar Toggle Button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -41,25 +46,30 @@
     </nav>
 
     <!-- Hero Section -->
-    <div class="hero">
-        <h1>Contact Us</h1>
-        <p>Get in touch with us for inquiries, partnerships, or support.</p>
-    </div>
+    <header class="hero-section text-center text-white d-flex align-items-center">
+        <div class="container">
+            <h1>Contact Us</h1>
+            <p>Get in touch with us for inquiries, partnerships, or support.</p>
+        </div>
+    </header>
 
     <div class="container mt-4">
         <div class="row">
             <div class="col-md-6">
                 <h3>Our Contact Details</h3>
-                <p><strong>Email:</strong> support@studentjobs.com</p>
-                <p><strong>Phone:</strong> +267 123 4567</p>
-                <p><strong>Location:</strong> Gaborone, Botswana</p>
-                <p>Follow us on social media:</p>
+                <p class="text-dark me-2"><i class="fas fa-envelope me-2"></i><strong>Email:</strong>
+                    support@studentjobs.com</p>
+                <p class="text-dark me-2"><i class="fas fa-phone me-2"></i><strong>Phone:</strong> +267 123 4567</p>
+                <p class="text-dark me-2"><i class="fas fa-map-marker-alt me-2"></i><strong>Location:</strong> Gaborone,
+                    Botswana</p>
+                <p style="color: #222831;">Follow us on social media:</p>
                 <p>
-                    <a href="#" class="text-dark me-2">Facebook</a> |
-                    <a href="#" class="text-dark me-2">Twitter</a> |
-                    <a href="#" class="text-dark">LinkedIn</a>
+                    <a href="#" class="text-dark me-2"><i class="fab fa-facebook"></i> Facebook</a> |
+                    <a href="#" class="text-dark me-2"><i class="fab fa-twitter"></i> Twitter</a> |
+                    <a href="#" class="text-dark"><i class="fab fa-linkedin"></i> LinkedIn</a>
                 </p>
             </div>
+
             <div class="col-md-6">
                 <div class="card p-4 shadow-sm" id="contact-us">
                     <div class="contact-form">
