--- a/index.html
+++ b/index.html
@@ -1,141 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CampusConnect</title>
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="styles.css" />
 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 
-<body class="login" style="background-image: url(images/background_youth.png);">
+<body class="login image-overlay" style="background-image: url(images/background_youth.png);">
+  <div class="background-overlay">
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-  <div class="container d-flex justify-content-between">
-    
-    <!-- Toggle Button (must come before collapse) -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+      <div class="container d-flex justify-content-between">
 
-    <!-- Navbar Brand (centered with absolute positioning) -->
-    <a class="navbar-brand fw-bold mx-auto position-absolute start-50 translate-middle-x site-title text-success" href="index.html">CampusConnect</a>
+        <!-- Toggle Button (must come before collapse) -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Navbar Links -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="listing.html">Available</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="#how-it-works">How It Works</a></li>
-        <li class="nav-item">
-          <a class="btn btn-primary ms-lg-3 mt-2 mt-lg-0" href="login.html">Post a Job</a>
-        </li>
-      </ul>
-    </div>
+        <!-- Navbar Brand (centered with absolute positioning) -->
+        <a class="navbar-brand fw-bold mx-auto position-absolute start-50 translate-middle-x site-title text-success"
+          href="index.html">CampusConnect</a>
+
+        <!-- Navbar Links -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="listing.html">Available</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#how-it-works">How It Works</a></li>
+            <li class="nav-item">
+              <a class="btn btn-primary ms-lg-3 mt-2 mt-lg-0" href="login.html">Post a Job</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <header class="hero-section text-center text-white d-flex align-items-center">
+      <div class="container">
+        <h2 class="display-4 fw-bold">Welcome to <h2 class="display-4 fw-bold" style="color: rgb(109, 229, 117);">
+            CampusConnect</h2>
+        </h2>
+        <p class="lead">Affordable, skilled, and ready to help your business thrive.</p>
+        <a href="login.html" class="btn btn-primary btn-lg">Post a Job</a>
+      </div>
+    </header>
+
+
+    <!-- Benefits Section -->
+    <section class="container py-5" id="about">
+      <h2 class="text-center mb-4" style="color: rgb(219, 237, 54);">Why Hire University Students?</h2>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <div class="card p-4 shadow-sm">
+            <h4>Affordable Talent</h4>
+            <p>Save costs while accessing highly motivated and skilled students.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4 shadow-sm">
+            <h4>Fresh Perspectives</h4>
+            <p>Benefit from innovative ideas and cutting-edge knowledge.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card p-4 shadow-sm">
+            <h4>Flexible Workforce</h4>
+            <p>Students adapt quickly and fit your business’s unique schedule.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- How It Works Section -->
+    <section class="bg-light py-5" id="how-it-works">
+      <div class="container text-center">
+        <h2 class="mb-4">How It Works</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <h4>1. Post a Job</h4>
+            <p>Create a job listing tailored to your business needs.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>2. Connect with Students</h4>
+            <p>Review applications and select the best candidates.</p>
+          </div>
+          <div class="col-md-4">
+            <h4>3. Get Work Done</h4>
+            <p>Hire motivated students to deliver quality work on time.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="carousel" class="container py-5" style="color: rgb(210, 228, 47);">
+      <h2 class="text-center mb-4">What Employers Say</h2>
+      <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+
+        <!-- Indicators -->
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <p class="lead text-center">"Student Talent Connect helped us find a skilled marketing intern who boosted
+              our
+              social media presence by 40%." – Jane, Small Business Owner</p>
+          </div>
+          <div class="carousel-item">
+            <p class="lead text-center">"Reliable and professional students—we hired two part-timers who exceeded
+              expectations." – David, Startup Founder</p>
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev"
+          role="button">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next"
+          role="button">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-4 mt-5">
+      <p>&copy; 2025 CampusConnect. All rights reserved.</p>
+      <a href="contact.html" class="btn btn-outline-light">Contact Us</a>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </div>
-</nav>
-
-<!-- Hero Section -->
-<header class="hero-section text-center text-white d-flex align-items-center">
-  <div class="container">
-    <h1 class="display-4 fw-bold">Hire Talented University Students</h1>
-    <p class="lead">Affordable, skilled, and ready to help your business thrive.</p>
-    <a href="login.html" class="btn btn-primary btn-lg">Post a Job</a>
-  </div>
-</header>
-
-
-<!-- Benefits Section -->
-<section class="container py-5" id="about">
-  <h2 class="text-center mb-4">Why Hire University Students?</h2>
-  <div class="row text-center">
-    <div class="col-md-4">
-      <div class="card p-4 shadow-sm">
-        <h4>Affordable Talent</h4>
-        <p>Save costs while accessing highly motivated and skilled students.</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card p-4 shadow-sm">
-        <h4>Fresh Perspectives</h4>
-        <p>Benefit from innovative ideas and cutting-edge knowledge.</p>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="card p-4 shadow-sm">
-        <h4>Flexible Workforce</h4>
-        <p>Students adapt quickly and fit your business’s unique schedule.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- How It Works Section -->
-<section class="bg-light py-5" id="how-it-works">
-  <div class="container text-center">
-    <h2 class="mb-4">How It Works</h2>
-    <div class="row">
-      <div class="col-md-4">
-        <h4>1. Post a Job</h4>
-        <p>Create a job listing tailored to your business needs.</p>
-      </div>
-      <div class="col-md-4">
-        <h4>2. Connect with Students</h4>
-        <p>Review applications and select the best candidates.</p>
-      </div>
-      <div class="col-md-4">
-        <h4>3. Get Work Done</h4>
-        <p>Hire motivated students to deliver quality work on time.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- Testimonials Section -->
-<section class="container py-5" style="color: rgb(218, 240, 17);">
-  <h2 class="text-center mb-4">What Employers Say</h2>
-  <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
-    
-    <!-- Indicators -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#testimonialCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    </div>
-
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <p class="lead text-center">"Student Talent Connect helped us find a skilled marketing intern who boosted our social media presence by 40%." – Jane, Small Business Owner</p>
-      </div>
-      <div class="carousel-item">
-        <p class="lead text-center">"Reliable and professional students—we hired two part-timers who exceeded expectations." – David, Startup Founder</p>
-      </div>
-    </div>
-
-    <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev" role="button">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next" role="button">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</section>
-
-<!-- Footer -->
-<footer class="bg-dark text-white text-center py-4 mt-5">
-  <p>&copy; 2025 CampusConnect. All rights reserved.</p>
-  <a href="contact.html" class="btn btn-outline-light">Contact Us</a>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
